--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{27,34,35}, pypy, lint
+    py{27,34,35}, pypy, lint, docs
 skip_missing_interpreters =
     True
 
@@ -17,3 +17,9 @@ commands =
     pylint --rcfile=.pylintrc -E auto_extract
 deps =
     pylint>=1.3.1,<2.0.0
+
+[testenv:docs]
+commands =
+    sphinx-build -E -n -W -b html docs/source docs/build
+deps =
+    Sphinx>=1.4.1,<2.0.0
