Adds configuration for end-of-file-fixer to cover all kinds of files including .ini

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@
     -   id: debug-statements
     -   id: double-quote-string-fixer
     -   id: end-of-file-fixer
+        files: ''
     -   id: fix-encoding-pragma
         exclude: setup.py
     -   id: forbid-new-submodules
