Adds sample tableau datasource file Adds pre-commit hook to check for valid xml (includes tds as file type)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,8 @@
     -   id: check-case-conflict
     -   id: check-docstring-first
     -   id: check-merge-conflict
+    -   id: check-xml
+        files: \.(xml|tds)$
     -   id: check-yaml
     -   id: debug-statements
     -   id: double-quote-string-fixer
