Updates the tox.ini with install_dependencies command

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skip_missing_interpreters =
 
 [testenv]
 commands =
+    python setup.py install_dependencies
     python setup.py test
 deps =
     -rrequirements.txt
@@ -20,6 +21,7 @@ deps =
 
 [testenv:docs]
 commands =
+    python setup.py install_dependencies
     sphinx-build -E -n -W -b html docs/source docs/build
 deps =
     Sphinx>=1.4.1,<2.0.0
