--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{27,34,35}, pypy, lint, docs
+    py{27,34,35}, pypy, pre-commit, lint, docs
 skip_missing_interpreters =
     True
 
@@ -25,3 +25,10 @@ commands =
     sphinx-build -E -n -W -b html docs/source docs/build
 deps =
     Sphinx>=1.4.1,<2.0.0
+
+[testenv:pre-commit]
+commands =
+    pre-commit install
+    pre-commit run --all-files
+deps =
+    pre-commit>=0.9.4,<1.0.0
