--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,12 @@ envlist =
 skip_missing_interpreters =
     True
 
+[tox:travis]
+2.7 = py27, lint, pre-commit, docs
+3.4 = py34,
+3.5 = py35,
+pypy = pypy,
+
 [testenv]
 commands =
     python setup.py install_dependencies
