--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: python
-python:
-  - 2.7
-  - pypy
+python: 2.7
+env:
+  - TOXENV=py27
+  - TOXENV=pypy
+  - TOXENV=pre-commit
+  - TOXENV=docs
+  - TOXENV=lint
 cache: pip
-install:
-  - pip install tox-travis
 matrix:
   fast_finish: true
+install:
+  - pip install tox
 script:
-  - tox
+  - tox -e $TOXENV
 after_success:
   - curl -Lo travis_after_all.py https://git.io/travis_after_all
   - python travis_after_all.py
