Removes alabaster theme and instead adds readthedocs theme for docs

--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,6 @@ deps =
     pre-commit: pre-commit>=0.9.4,<1.0.0
     lint: pylint>=1.3.1,<2.0.0
     docs: Sphinx>=1.4.1,<2.0.0
+    docs: sphinx_rtd_theme>=0.1.9,<0.2
 recreate =
     True
