--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,3 @@
-alabaster==0.7.7
 Babel==2.3.4
 codecov==2.0.3
 coverage==4.0.3
@@ -15,5 +14,6 @@ requests==2.10.0
 six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.4.1
+sphinx_rtd_theme==0.1.9
 tox==2.3.1
 virtualenv==15.0.1
