--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache: pip
 matrix:
   fast_finish: true
 install:
-  - pip install tox
+  - pip install 'tox>=2.3.1,<3.0.0'
 script:
   - tox -e $TOXENV
 after_success:
