--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 language: python
-python: 2.7
-env:
-  - TOXENV=py27
-  - TOXENV=pypy
-  - TOXENV=pre-commit
-  - TOXENV=docs
-  - TOXENV=lint
 cache: pip
 matrix:
+  include:
+  - python: '2.7'
+    env: TOXENV=py27
+  - python: 'pypy-5.3.1'
+    env: TOXENV=pypy
+  - python: '2.7'
+    env: TOXENV=pre-commit
+  - python: '2.7'
+    env: TOXENV=docs
+  - python: '2.7'
+    env: TOXENV=lint
   fast_finish: true
 install:
   - pip install 'tox>=2.3.1,<3.0.0'
