--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,10 @@ matrix:
   fast_finish: true
 install:
   - pip install 'tox>=2.3.1,<3.0.0'
+  - pip install coveralls
 script:
   - tox -e $TOXENV
+  - coverage run -m py.test
+  - coverage report -m
 after_success:
-  - curl -Lo travis_after_all.py https://git.io/travis_after_all
-  - python travis_after_all.py
-  - export $(cat .to_export_back)
-  - |
-      if [ "$BUILD_LEADER" = "YES" ]; then
-        if [ "$BUILD_AGGREGATE_STATUS" = "others_succeeded" ]; then
-          python setup.py coverage && codecov
-        fi
-      fi
+  - coveralls
