--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,5 @@
 Babel==2.3.4
-codecov==2.0.3
-coverage==4.0.3
+coveralls==1.1
 docutils==0.12
 imagesize==0.7.1
 Jinja2==2.8
@@ -9,6 +8,7 @@ pluggy==0.3.1
 pre_commit==0.9.4
 py==1.4.31
 Pygments==2.1.3
+pytest-cov==2.4.0
 pytz==2016.4
 requests==2.10.0
 six==1.10.0
