Divides testenv config in tox.ini Runs pytest with -v (verbose) option

--- a/tox.ini
+++ b/tox.ini
@@ -7,16 +7,30 @@ skip_missing_interpreters =
 [testenv]
 commands =
     python setup.py install_dependencies
-    py{27,py}: python setup.py test
-    pre-commit: pre-commit install
-    pre-commit: pre-commit run --all-files
-    lint: pylint --rcfile=.pylintrc -E auto_extract
-    docs: sphinx-build -E -n -W -b html docs/source docs/build
+    python setup.py test -v
 deps =
-    py{27,py}: -rrequirements.txt
-    pre-commit: pre-commit>=0.9.4,<1.0.0
-    lint: pylint>=1.3.1,<2.0.0
-    docs: Sphinx>=1.4.1,<2.0.0
-    docs: sphinx_rtd_theme>=0.1.9,<0.2
+    -rrequirements.txt
 recreate =
     True
+
+[testenv:pre-commit]
+commands =
+    pre-commit install
+    pre-commit run --all-files
+deps =
+    pre-commit>=0.9.4,<1.0.0
+
+[testenv:docs]
+commands =
+    python setup.py install_dependencies
+    sphinx-build -E -n -W -b html docs/source docs/build
+deps =
+    Sphinx>=1.4.1,<2.0.0
+    sphinx_rtd_theme>=0.1.9,<0.2
+
+[testenv:lint]
+commands =
+    python setup.py install_dependencies
+    pylint --rcfile=.pylintrc -E auto_extract
+deps =
+    pylint>=1.3.1,<2.0.0
