Moves coveralls and pytest-cov from setup.py to tox.ini Removes tox version from travis Uses coveralls in tox

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,16 @@ skip_missing_interpreters =
 [testenv]
 commands =
     python setup.py install_dependencies
-    python setup.py test -v
+    coverage run setup.py test
+    coveralls
 deps =
     -rrequirements.txt
+    coveralls
+    pytest-cov
+passenv =
+    TRAVIS
+    TRAVIS_JOB_ID
+    TRAVIS_BRANCH
 recreate =
     True
 
