--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,6 @@ matrix:
     env: TOXENV=lint
   fast_finish: true
 install:
-  - pip install 'tox>=2.3.1,<3.0.0'
-  - pip install coveralls
+  - pip install tox
 script:
   - tox -e $TOXENV
-  - coverage run -m py.test
-  - coverage report -m
-after_success:
-  - coveralls
