--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{27,py}, pre-commit, lint, docs
+    py{27}, pre-commit, lint, docs
 skip_missing_interpreters =
     True
 
