Uses auto_extract.paths in content_handler and modifies the test cases and sample file accordingly

--- a/tests/resources/sample-datasource-metadata-definition.yaml
+++ b/tests/resources/sample-datasource-metadata-definition.yaml
@@ -1,6 +1,7 @@
 datasource:
     formatted-name: 'Datasource Example'
     inline: 'true'
+    version: '10.0'
 connection:
     authentication: sqlserver
     class: sqlserver
