--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-testpaths = auto_extract tests
+testpaths = tableaupy tests
 addopts = --doctest-modules
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
