--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,6 @@ deps =
 [testenv:lint]
 commands =
     python setup.py install_dependencies
-    pylint --rcfile=.pylintrc -E auto_extract
+    pylint --rcfile=.pylintrc -E tableaupy
 deps =
     pylint>=1.3.1,<2.0.0
