--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,7 @@ imagesize==0.7.1
 Jinja2==2.8
 MarkupSafe==0.23
 pluggy==0.3.1
-pre_commit==0.9.4
+pre-commit>=0.9.4,<1.0.0
 py==1.4.31
 Pygments==2.1.3
 pytest-cov==2.4.0
