--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,8 @@
 Babel==2.3.4
 coveralls==1.1
 docutils==0.12
+flake8>=3.3.0,<3.4.0
+hacking>=0.13.0,<0.14.0
 imagesize==0.7.1
 Jinja2==2.8
 MarkupSafe==0.23
@@ -8,6 +10,7 @@ pluggy==0.3.1
 pre-commit>=0.9.4,<1.0.0
 py==1.4.31
 Pygments==2.1.3
+pylint>=1.3.1,<2.0.0
 pytest-cov==2.4.0
 pytz==2016.4
 requests==2.10.0
