Adds flake8 env to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{27}, pre-commit, lint
+    py{27}, pre-commit, lint, flake8
 skip_missing_interpreters =
     True
 
@@ -33,3 +33,11 @@ commands =
     pylint --rcfile=.pylintrc -E tableaupy
 deps =
     pylint>=1.3.1,<2.0.0
+
+[testenv:flake8]
+commands =
+    python setup.py install_dependencies
+    flake8 --benchmark --statistics tableaupy tests
+deps =
+    flake8>=3.3.0,<3.4.0
+    hacking>=0.13.0,<0.14.0
