--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
     env: TOXENV=pre-commit
   - python: '2.7'
     env: TOXENV=lint
+  - python: '2.7'
+    env: TOXENV=flake8
   fast_finish: true
 install:
   - pip install tox
