--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands =
     pylint --rcfile=tests/.pylintrc tests
 deps =
     pylint>=1.3.1,<2.0.0
+    pyyaml>=3.12,<=3.19
 
 [testenv:flake8]
 commands =
