Adds verbose option for pytest in tox env py27

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skip_missing_interpreters =
 [testenv]
 commands =
     python setup.py install_dependencies
-    coverage run setup.py test
+    coverage run setup.py test --addopts -v
     coveralls
 deps =
     -rrequirements.txt
