Moves verbose option for pytest form tox.ini to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 testpaths = tableaupy tests
-addopts = --doctest-modules
+addopts = --doctest-modules -v
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
